docs: updated comment

--- a/fil-word-embeddings.ipynb
+++ b/fil-word-embeddings.ipynb
@@ -446,7 +446,7 @@
     "\n",
     "analogy_test_cases = {\n",
     "    # Pinggan is to plato, as gwapo is to pogi (expected)\n",
-    "    # synonymy | word2vec_result: gwapo → pogi (correct) | fasttext_result: gwapo → gwapo-gwapo\n",
+    "    # synonymy | word2vec_result: gwapo → pogi (correct) | fasttext_result: gwapo → gwapo-gwapo (wrong)\n",
     "    \"synonymy\": {\"positive\": [\"pinggan\", \"gwapo\"], \"negative\": [\"plato\"]},\n",
     "    # Buhay is to patay, as laki is to liit (expected)\n",
     "    # antonymy | word2vec_result: laki → liit (correct) | fasttext_result: laki → laki-laki (wrong)\n",
